Add interactive Jupyter notebook version of Training Operationalization
- Convert 02-training-operationalization.md to .ipynb format
- Include executable Python code examples for CI/CD concepts
- Add practical examples: environment configuration, unit tests, integration tests
- Demonstrate MLOps testing strategies with working code
- Update _toc.yml to include both markdown and notebook versions
- Jupyter Book supports both .md and .ipynb formats seamlessly

--- a/_toc.yml
+++ b/_toc.yml
@@ -4,6 +4,8 @@ root: intro
 chapters:
   - file: content/01-ml-development
   - file: content/02-training-operationalization
+  - file: content/02-training-operationalization.ipynb
+    title: Training Operationalization (Interactive)
   - file: content/03-continuous-training
   - file: content/04-model-deployment
   - file: content/05-prediction-serving
