Restructure Jupyter Book TOC into parts; add Mermaid CSS; configure Sphinx excludes; enable only_build_toc_files; set up uv packaging; fix docs title; add .gitignore

--- a/_toc.yml
+++ b/_toc.yml
@@ -1,15 +1,23 @@
 # Table of Contents
 format: jb-book
 root: intro
-chapters:
-  - file: content/01-ml-development
-  - file: content/02-training-operationalization
-  - file: content/02-training-operationalization.ipynb
-    title: Training Operationalization (Interactive)
-  - file: content/03-continuous-training
-  - file: content/04-model-deployment
-  - file: content/05-prediction-serving
-  - file: content/06-continuous-monitoring
-  - file: content/07-data-and-model-management
-  - file: content/08-dataset-and-feature-management
-  - file: content/09-model-management
+parts:
+  - caption: Overview
+    chapters:
+      - file: docs
+        title: White paper (Overview)
+  - caption: Training and Pipelines
+    chapters:
+      - file: content/01-ml-development
+      - file: content/02-training-operationalization
+      - file: content/03-continuous-training
+  - caption: Deployment and Serving
+    chapters:
+      - file: content/04-model-deployment
+      - file: content/05-prediction-serving
+      - file: content/06-continuous-monitoring
+  - caption: Management and Governance
+    chapters:
+      - file: content/07-data-and-model-management
+      - file: content/08-dataset-and-feature-management
+      - file: content/09-model-management
